k8s/runner/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: <value-set-through-kustomization-yaml>
