k8s/runner/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: runner
  labels:
    app: runner
spec:
  selector:
    app: runner
  type: ClusterIP # LoadBalancer # NodePort # 
  ports:
    - protocol: TCP
      name: m-http  
      port: 80
      targetPort: 3000
